Fix overflow bugs when there are a lot of playlists

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -8,7 +8,6 @@ nav {
   font-weight: bold;
   font-size: 0.9rem;
   max-height: 670px;
-  position: relative;
 
   display: flex;
   flex-direction: column;
@@ -55,6 +54,7 @@ nav {
     display: flex;
     flex-direction: column;
     margin-top: 18px;
+    overflow-y: auto;
 
     .create-playlist,
     .liked-songs {
@@ -111,10 +111,28 @@ nav {
       font-weight: 300;
       user-select: none;
       height: 100%;
+      overflow-y: hidden;
 
+      &:hover, &:focus, &:active{
+        overflow-y: auto;
+      }
+
+      &::-webkit-scrollbar {
+        width: 12px;
+        background-color: transparent;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background-color: $essential-subdued;
+        
+
+        &:hover {
+          background-color: $text-subdued;
+        }
+
+      }
 
       ul {
-        
         li {
           height: 32px;
           padding: 0 8px;
@@ -136,14 +154,11 @@ nav {
   }
 
   .install-app {
-    position: absolute;
-    bottom: 0;
     width: 100%;
     height: 40px;
     padding: 0 8px;
     background-color: $background-press;
-    display: flex;
-    align-self: flex-end;
+    margin-top: auto;
 
     a {
       display: flex;
